[package]
name = "foundry-local-webserver"
version = "0.1.0"
edition = "2021"
description = "Example of using the Foundry Local SDK with a local OpenAI-compatible web server"

[dependencies]
foundry-local-sdk = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
