[package]
name = "hello-foundry-local"
version = "0.1.0"
edition = "2021"
description = "A simple example of using the Foundry Local Rust SDK"

[dependencies]
foundry-local = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
env_logger = "0.10" 