[package]
name = "native-chat-completions"
version = "0.1.0"
edition = "2021"
description = "Native SDK chat completions (non-streaming and streaming) using the Foundry Local Rust SDK"

[dependencies]
foundry-local-sdk = { path = "../../../sdk_v2/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
