[package]
name = "responses-api"
version = "0.1.0"
edition = "2021"
description = "Vision (image understanding) example using the Foundry Local web service and the OpenAI Responses API"

[dependencies]
foundry-local-sdk = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
futures-util = "0.3"
