[package]
name = "tool-calling-foundry-local"
version = "0.1.0"
edition = "2021"
description = "Tool calling example using the Foundry Local Rust SDK"

[dependencies]
foundry-local-sdk = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
foundry-local-sdk = { path = "../../../sdk/rust", features = ["winml"] }
