[package]
name = "tutorial-document-summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
foundry-local-sdk = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
foundry-local-sdk = { path = "../../../sdk/rust", features = ["winml"] }
