[package]
name = "web-server-responses"
version = "0.1.0"
edition = "2021"
description = "Responses API sample using the Foundry Local OpenAI-compatible web service"

[dependencies]
foundry-local-sdk = { path = "../../../sdk/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }

[target.'cfg(windows)'.dependencies]
foundry-local-sdk = { path = "../../../sdk/rust", features = ["winml"] }
